fix: gantt dependecies, columns styles, today marker align

--- a/src/Gantt.less
+++ b/src/Gantt.less
@@ -27,7 +27,7 @@
   main {
     position: relative;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     width: 100%;
     flex: 1;
     border-top: 1px solid #f0f0f0;
